# precious

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  copilot-code-review.yml  copilot-setup-steps.yml
client/: app.js  index.html  package-lock.json  package.json
client/src/: App.jsx  api.js
client/src/components/: Repositories.jsx  ServerAccess.jsx  SessionComposer.jsx  SessionControls.jsx  ToolCallLogs.jsx
server/: __init__.py  app.py  dev.py
tests/: test_server.py
