[project]
name = "precious"
version = "0.1.0"
description = "Agent management server and web client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
precious-server = "server.app:main"
precious-dev = "server.dev:main"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = true
